fix background for dark mode

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -6,7 +6,7 @@
 html,
 body {
     margin: 0;
-    height: 100%;
+    min-height: 100%;
 }
 
 :root .dark-theme {
@@ -65,6 +65,7 @@ select {
     padding: 15px 32px;
     text-align: center;
     display: inline-block;
+    font-family: 'Roboto', sans-serif;
 }
 
 .dark-theme select {
